--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mthines/typescript-package-boilerplate",
+  "name": "@mthines/react-native-font-face",
   "version": "0.1.0",
   "description": "TypeScript Module Boilerplate",
   "main": "lib/index.js",
@@ -10,7 +10,10 @@
     "format": "prettier --write \"src/**/*.(js|ts)\"",
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "eslint src --fix --ext .js,.ts",
-    "test": "jest --config jest.config.js",
+    "clean": "rimraf ./lib",
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+    "test": "cross-env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha -r ts-node/register",
+    "test:watch": "cross-env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha -r ts-node/register --watch",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
@@ -19,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mthines/typescript-package-boilerplate"
+    "url": "git+https://github.com/mthines/react-native-font-face"
   },
   "keywords": [
     "boilerplate",
@@ -28,20 +31,32 @@
   "author": "Mads Thines",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mthines/typescript-package-boilerplate/issues"
+    "url": "https://github.com/mthines/react-native-font-face/issues"
   },
-  "homepage": "https://github.com/mthines/typescript-package-boilerplate#readme",
+  "homepage": "https://github.com/mthines/react-native-font-face#readme",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
+    "@types/chai": "^4.2.19",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^8.2.2",
+    "@types/react-native": "^0.64.10",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
+    "chai": "^4.3.4",
     "eslint": "^7.30.0",
-    "eslint-plugin-jest": "^24.3.6",
-    "jest": "^27.0.6",
-    "ts-jest": "^27.0.3",
+    "jsdom": "^16.6.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^9.0.2",
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "react-native": "^0.64.2"
+  }
 }
