--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,6 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "env": {
     "mocha": true
-  }
+  },
+  "rules": { "@typescript-eslint/explicit-module-boundary-types": 0 }
 }
