--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint:fix": "eslint src --fix --ext .js,.ts",
     "clean": "rimraf ./lib",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
-    "test": "cross-env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha -r ts-node/register",
-    "test:watch": "cross-env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha -r ts-node/register --watch",
+    "test": "cross-env TS_NODE_PROJECT=\"src/__tests__/tsconfig.testing.json\" mocha -r ts-node/register",
+    "test:watch": "cross-env TS_NODE_PROJECT=\"src/__tests__/tsconfig.testing.json\" mocha -r ts-node/register --watch",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
@@ -52,11 +52,16 @@
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
-  "files": [
-    "lib/**/*"
-  ],
   "dependencies": {
     "cross-env": "^7.0.3",
     "react-native": "^0.64.2"
-  }
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
