--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,5 +37,6 @@ jobs:
 
       - name: Publish module
         env:
+          GITHUB_TOKEN: ${{ secrets.GH_GITHUB_TOKEN }}
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
         run: npx semantic-release
