--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mthines/react-native-font-face",
-  "version": "0.1.0",
+  "version": "0.0.0-automated",
   "description": "TypeScript Module Boilerplate",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -50,19 +50,16 @@
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
     "react-native": "^0.64.2"
   },
   "release": {
     "branches": [
       "main"
     ]
-  },
-  "publishConfig": {
-    "tag": "v1-latest"
   },
   "files": [
     "lib/**/*"
