--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/mthines/react-native-font-face#readme",
   "devDependencies": {
+    "@semantic-release/npm": "^7.1.3",
     "@types/chai": "^4.2.19",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^8.2.2",
@@ -42,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "chai": "^4.3.4",
+    "cross-env": "^7.0.3",
     "eslint": "^7.30.0",
     "jsdom": "^16.6.0",
     "jsdom-global": "^3.0.2",
@@ -50,8 +52,7 @@
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.5",
-    "cross-env": "^7.0.3"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "react-native": "^0.64.2"
