--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,4 +1,14 @@
 {
   "branches": ["master", "next"],
-  "plugins": ["@semantic-release/commit-analyzer", "@semantic-release/release-notes-generator", "@semantic-release/npm"]
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": true,
+        "access": "public"
+      }
+    ]
+  ]
 }
