--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,20 @@
 {
   "branches": ["master", "next"],
-  "analyzeCommits": "@bubltechnology/customizable-commit-analyzer",
   "plugins": [
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "angular",
+        "releaseRules": [
+          { "type": "docs", "release": "patch" },
+          { "type": "refactor", "release": "patch" },
+          { "type": "style", "release": "patch" }
+        ],
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
+        }
+      }
+    ],
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/npm",
