--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/mthines/react-native-font-face#readme",
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.1.3",
     "@types/chai": "^4.2.19",
     "@types/expect": "^24.3.0",
