minor - Commit name change to trigger

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,15 +4,7 @@
     [
       "@semantic-release/commit-analyzer",
       {
-        "preset": "angular",
-        "releaseRules": [
-          { "type": "docs", "release": "patch" },
-          { "type": "refactor", "release": "patch" },
-          { "type": "style", "release": "patch" }
-        ],
-        "parserOpts": {
-          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
-        }
+        "preset": "angular"
       }
     ],
     "@semantic-release/release-notes-generator",
